# UCSP_Amazon

./: README.md  carrito_de_compras.css  carrito_de_compras.html  main.py  register.html  requirements.txt  settings.py
2.0/: .env  app.py  crear_base.py  models.py  routes.py
2.0/static/css/: sale.css  shoppingcar.css
2.0/static/js/: index.js  sale.js
poetry_DBP_final/: pyproject.toml
poetry_DBP_final/tests/: test_poetry_dbp_final.py
static/css/: buy.css  index.css  sale.css  shoppingcar.css  signup.css
static/js/: buy.js  shoppingcar.js  signup.js
templates/: buy.html  index.html  sale.html  shoppingcar.html  signup.html
