[tool.poetry]
name = "poetry_DBP_final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click==8.1.3
colorama==0.4.5
Flask==2.1.2
Flask-JWT-Extended==4.4.2
Flask-MySQLdb==1.0.1
importlib-metadata==4.12.0
itsdangerous==2.1.2
Jinja2==3.1.2
MarkupSafe==2.1.1
mysqlclient==2.1.1
passlib==1.7.4
PyJWT==2.4.0
python-dotenv==0.20.0
Werkzeug==2.1.2
zipp==3.8.0

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 88